<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>vlizBE</groupId>
  <artifactId>dcafs</artifactId>
  <version>0.8.3</version>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
  <build>
		<resources>
			<resource>
			<directory>src/resources</directory>
			<filtering>false</filtering>
			</resource>
		</resources>
		<sourceDirectory>src</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>
			<plugin>
				<!-- Build an executable JAR -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>DAS_lib/</classpathPrefix>
							<mainClass>das.DAS</mainClass>
						</manifest>
						<manifestEntries>
    						<Class-Path>./</Class-Path>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-dependency-plugin -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
				  <execution>
					<phase>package</phase>
					<goals>
					  <goal>copy-dependencies</goal>
					</goals>
					<configuration>
					  <outputDirectory>${project.build.directory}/DAS_lib</outputDirectory>
					</configuration>
				  </execution>
				</executions>
			</plugin>
		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-source-plugin -->
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-source-plugin</artifactId>
			<version>3.2.1</version>
			<executions>
				<execution>
					<id>attach-sources</id>
					<goals>
						<goal>jar</goal>
					</goals>
				</execution>
			</executions>
		</plugin>
		  <!--
		  <plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-javadoc-plugin</artifactId>
			<version>3.2.0</version>
			<executions>
				<execution>
					<id>attach-javadocs</id>
					<goals>
						<goal>jar</goal>
					</goals>
				</execution>
			</executions>
		</plugin>-->
    </plugins>
  </build>
  <dependencies>
	  <!-- https://mvnrepository.com/artifact/org.influxdb/influxdb-java -->
	  <dependency>
		  <groupId>org.influxdb</groupId>
		  <artifactId>influxdb-java</artifactId>
		  <version>2.21</version>
	  </dependency>
	<!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
	<dependency>
		<groupId>com.sun.mail</groupId>
		<artifactId>javax.mail</artifactId>
		<version>1.6.2</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
	<dependency>
		<groupId>io.netty</groupId>
		<artifactId>netty-all</artifactId>
		<version>4.1.63.Final</version>
	</dependency>
	  <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
	  <dependency>
		  <groupId>com.microsoft.sqlserver</groupId>
		  <artifactId>mssql-jdbc</artifactId>
		  <version>9.2.1.jre11</version>
	  </dependency>
	<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
	<dependency>
		<groupId>mysql</groupId>
		<artifactId>mysql-connector-java</artifactId>
		<version>8.0.23</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
	<dependency>
		<groupId>org.xerial</groupId>
		<artifactId>sqlite-jdbc</artifactId>
		<version>3.23.1</version> <!-- All newer version crash on beaglebone, armhf not supported anymore (?) -->
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.fazecast/jSerialComm -->
	<dependency>
		<groupId>com.fazecast</groupId>
		<artifactId>jSerialComm</artifactId>
		<version>2.6.2</version>
	</dependency>
	  <!-- https://mvnrepository.com/artifact/com.diozero/diozero-core -->
	  <dependency>
		  <groupId>com.diozero</groupId>
		  <artifactId>diozero-core</artifactId>
		  <version>1.1.9</version>
	  </dependency>
	<!-- https://mvnrepository.com/artifact/org.tinylog/tinylog-api -->
	<dependency>
		<groupId>org.tinylog</groupId>
		<artifactId>tinylog-api</artifactId>
		<version>2.2.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.tinylog/tinylog-impl -->
	<dependency>
		<groupId>org.tinylog</groupId>
		<artifactId>tinylog-impl</artifactId>
		<version>2.2.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
	<dependency>
		<groupId>javax.xml.bind</groupId>
		<artifactId>jaxb-api</artifactId>
		<version>2.3.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
	<dependency>
		<groupId>org.apache.commons</groupId>
		<artifactId>commons-lang3</artifactId>
		<version>3.11</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
	<dependency>
		<groupId>org.mariadb.jdbc</groupId>
		<artifactId>mariadb-java-client</artifactId>
		<version>2.7.2</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.eclipse.paho/org.eclipse.paho.client.mqttv3 -->
	<dependency>
		<groupId>org.eclipse.paho</groupId>
		<artifactId>org.eclipse.paho.client.mqttv3</artifactId>
		<version>1.2.5</version>
	</dependency>
  </dependencies>
</project>
